# umbra-tpp

./: .gitignore  DEMO.md  README.md  environment.yml  pyproject.toml
configs/: default.yaml
data/l2_snapshots/: depth_20260329_161925.csv  depth_20260329_162531.csv  trades_20260329_161925.csv  trades_20260329_162531.csv  trades_20260329_170256.csv
scripts/: fetch_market_data.py  generate_plots.py  run_demo.py  train_tpp.py
src/: __init__.py
src/backtest/: __init__.py  engine.py
src/features/: __init__.py  microstructure.py
src/model/: __init__.py  causal_layer.py  tpp_core.py
tests/: __init__.py  test_backtest.py  test_causal_layer.py  test_microstructure.py  test_tpp_core.py
